hphp/hack/test/typecheck/re_prefixed_string/non_re_prefixed_string.php.exp
File "non_re_prefixed_string.php", line 4, characters 8-20:
Only `re`-prefixed strings allowed. (Parsing[1002])
File "non_re_prefixed_string.php", line 4, characters 8-20:
Cannot use experimental feature: String prefixes other than `re` are not yet supported. (Other[0000])
