hphp/hack/test/typecheck/re_prefixed_string/non_re_prefixed_string.php
<?hh // strict

function f(): void {
  $y = f"bad prefix";
}
